--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ nptyping = "^2.5.0"
 spectral = { version = "^0.23.1", optional = true }
 
 [tool.poetry.extras]
-"spectral" = ["spectral"]
+spectral = ["spectral"]
 
 [tool.poetry.group.nb.dependencies]
 jupyter = "^1.0.0"
