--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ spectral = { version = "^0.23.1", optional = true }
 black = "^23.7.0"
 isort = "^5.12.0"
 mypy = "^1.4.1"
+pytest = "^7.4.0"
 
 [tool.poetry.extras]
 spectral = ["spectral"]
