--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "splib07-loader"
 version = "0.4.0-dev"
-description = ""
+description = "Tools for loading spectra from a local archive of the USGS Spectral Library Version 7"
 authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
 readme = "README.md"
 packages = [
