--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "splib07-loader"
-version = "0.4.0"
+version = "0.5.0-dev"
 description = "Tools for loading spectra from a local archive of the USGS Spectral Library Version 7"
 license = "Apache-2.0"
 authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
