Reorganize tests to use conftest fixtures

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,7 @@ strict = true
 [[tool.mypy.overrides]]
 module = "spectral.*"
 ignore_missing_imports = true
+
+# pytest config.
+[tool.pytest.ini_options]
+testpaths = ["tests"]
